# rmtrash-mac

./: Cargo.toml  LICENSE  README.md  project-overview.md
src/: main.rs
