[package]
name = "rmtrash-mac"
version = "0.2.2"
edition = "2024"
authors = ["nyshk <nyshk97@gmail.com>"]
description = "A safer rm: Move files to the macOS Trash, not permanently delete."
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
core-foundation = "0.9"
anyhow = "1.0"
objc = { version = "0.2.2", features = ["exception"] }

[[bin]]
name = "rmtrash"
path = "src/main.rs"
